[gd_scene load_steps=8 format=3 uid="uid://bkq53i8fkkjf8"]

[ext_resource type="Script" path="res://entities/blob.gd" id="1_eirte"]
[ext_resource type="PackedScene" uid="uid://bv20rjmvt3f7s" path="res://entities/blob.glb" id="2_h5pwi"]
[ext_resource type="AudioStream" uid="uid://crxoivtj43shl" path="res://audio/blob_walk.wav" id="3_bhh7m"]
[ext_resource type="AudioStream" uid="uid://bcjpy5xvr613" path="res://audio/blob_die.wav" id="4_l87sd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_c6qkn"]
size = Vector3(0.52, 0.375, 0.315)

[sub_resource type="BoxShape3D" id="BoxShape3D_bkb0v"]
size = Vector3(0.355, 0.105, 0.299)

[sub_resource type="BoxShape3D" id="BoxShape3D_kk2ey"]
size = Vector3(0.53, 0.3, 0.43)

[node name="blob" type="CharacterBody3D"]
script = ExtResource("1_eirte")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.192234, 0.00310461)
shape = SubResource("BoxShape3D_c6qkn")

[node name="mesh" type="Node3D" parent="."]

[node name="blob2" parent="mesh" instance=ExtResource("2_h5pwi")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="ground_check" type="RayCast3D" parent="mesh"]
transform = Transform3D(1, 0, 0, 0, 0.543848, -0.839184, 0, 0.839184, 0.543848, 0, 0.0289622, -0.251497)
target_position = Vector3(0, -0.2, 0)

[node name="KillArea3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.397482, 0.0652328)
shape = SubResource("BoxShape3D_bkb0v")

[node name="biteArea3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="biteArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.170881, 0.00997222)
shape = SubResource("BoxShape3D_kk2ey")

[node name="walk_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_bhh7m")
max_db = -12.0
autoplay = true
max_distance = 12.0

[node name="die_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_l87sd")

[connection signal="finished" from="walk_sound" to="." method="_on_walk_sound_finished"]
